# website

./: .arc  .babelrc  .cursorrules  .env.example  .eslintignore  .eslintrc  .eslintrc.cjs  .eslintrc.js  .fallowrc.json  .gitignore  .prettierignore  .prettierrc  .stylelintrc.json  777 - The Modern Dev CMS - Pocketbase.md  AGENTS.md  CLAUDE.md  Dockerfile  LARGE_TABLE_EXPORT_OPTIONS.md  NAHvercel.json  POSTGRES_MIGRATION_GUIDE.md  README.md  RELATED_EPISODES.md  SCHEMA_CHANGELOG.md  SCHEMA_DECISION.md  SCHEMA_EVOLUTION_WORKFLOW.md  app.arc  check-unmigrated.cjs  cleanup-completed-flags.cjs  docker-compose.yml  drizzle.config.ts  eslint.config.js  eslint.config.mjs  jest.config.js  migrate-missing-urls.cjs  migrate-mp3-urls.cjs  migration-report.md  next.config.js  package-lock.json  package.json  peek.yaml  (+20 more)
.circleci/: config.yml
.claude/: settings.json
.dex/: tasks.jsonl
.fallow/: .gitignore  baseline.json
.github/: ISSUE_TEMPLATE.md  copilot-instructions.md  copilot.md  testing.json
.storybook/: main.ts  preview.ts
books/: books.md
client/: polyfills.js
components/: Footer.js  Header.js  Logo.js  Page.js  Player.js  Provider.js  SearchBox.js  Show.js  ShowLink.js  ShowList.js  ShowNotes.js  SubmitModal.js  Subscribe.js  VideoPlayer.js  VolumeBars.js  bars.js  highcontrast.js  meta.js
docs/: CONTEXT.md  design-pass.md  schema-changelog.md  schema-workflow.md
drizzle/: 0000_graceful_shaman.sql  0001_hard_puppet_master.sql  schema.ts
lib/: classes.js  fileTransform.js  formatTime.js  getBaseURL.js  (+8 more)
start_script/: Cargo.toml
start_script/src/: main.rs
(+2342 files in other folders)
