[package]
name = "syntax_website_go"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
mysql = "18.2.0"
regex = "1.5.4"
semver = "1.0.20"
serde_json = "1.0.108"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "mysql"] }
url = "2.5.0"
csv = "1"
tokio = { version = "1", features = ["full"] }
